<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.oceane.jerome.applicationserveurbateau.ContainerInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Dechargement"
        android:id="@+id/TextViewDechargement"
        android:layout_gravity="center_horizontal"
        android:textColor="#dd4e4e"
        android:textSize="45sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextFieldId"
        android:textColor="#606060"
        android:textSize="30sp"
        android:hint="@string/Identifiant"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/TextViewDechargement"
        android:layout_alignEnd="@+id/ButtonTerminer" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextFieldDestination"
        android:textColor="#606060"
        android:textSize="30sp"
        android:hint="@string/Destination"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ajouter"
        android:id="@+id/ButtonAjouter"
        android:textSize="20sp"
        android:background="#21235f"
        android:textColor="#ffffff"
        android:clickable="true"
        android:enabled="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terminer"
        android:id="@+id/ButtonTerminer"
        android:textSize="20sp"
        android:background="#21235f"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/ButtonAjouter"
        android:layout_alignEnd="@+id/TextFieldDestination"
        android:enabled="true" />

</RelativeLayout>
