<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.oceane.jerome.applicationserveurbateau.BoatArrivedActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/BateauEntre"
        android:id="@+id/TextViewNewBoat"
        android:layout_gravity="center_horizontal"
        android:textColor="#dd4e4e"
        android:textSize="50sp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextFieldId"
        android:textColor="#606060"
        android:textSize="30sp"
        android:hint="@string/Identifiant"
        android:layout_marginTop="81dp"
        android:layout_below="@+id/TextViewNewBoat"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextFieldDestination"
        android:textColor="#606060"
        android:textSize="30sp"
        android:hint="@string/Destination"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/TextFieldId"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ajouter"
        android:id="@+id/ButtonAjouter"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:textSize="20sp"
        android:background="#21235f"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
