<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.oceane.jerome.applicationserveurbateau.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Menu"
        android:id="@+id/TextViewNewBoat"
        android:layout_gravity="center_horizontal"
        android:textColor="#dd4e4e"
        android:textSize="50sp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonOut"
        android:layout_gravity="center_horizontal"
        android:background="#01aaff"
        android:textColor="#ffffff"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/TextViewNewBoat"
        android:layout_alignParentEnd="true"
        android:text="@string/Chargement" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dechargement"
        android:id="@+id/ButtonIn"
        android:layout_gravity="center_horizontal"
        android:background="#01aaff"
        android:textColor="#ffffff"
        android:layout_below="@+id/ButtonOut"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:singleLine="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Quitter"
        android:id="@+id/ButtonQuitter"
        android:layout_gravity="center_horizontal"
        android:background="#21235f"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
