<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.oceane.jerome.applicationserveurbateau.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TextFieldLogin"
            android:textColor="#606060"
            android:textSize="30sp"
            android:hint="@string/Login"
            android:layout_weight="0.06" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/TextFieldPassword"
            android:layout_weight="0.03"
            android:textColor="#606060"
            android:hint="@string/MotDePasse"
            android:textSize="30sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Connexion"
            android:id="@+id/ButtonConnexion"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:clickable="true"
            android:textSize="20sp"
            android:background="#21235f"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>
